<resources>

    <string name="app_name">GPS</string>
    <string name="hello_world">MyPath.IO</string>
    <string name="mapActivity">My Map</string>
    <string name="start_trace">Start Tracing!</string>
    <string name="myPath">Show My Paths!</string>
    <string name="stopTrace">Stop Tracing Me !</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_gpsmap">GPSMapActivity</string>
    <string name="title_activity_draw_overlay">DrawOverlayActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="loginButton">Login</string>
    <string name="user">Username</string>

    <color name="blue">#2E9AFE</color>
    <color name="white">#FAFAFA</color>
    <color name="litegr">#BDBDBD</color>

    <string name="title_activity_mypath_io">mypathIO</string>
    <string name="title_activity_mypaths">Mypaths</string>
    <string name="title_activity_dashboard">Home</string>

</resources>