<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="@dimen/padding_medium"
        tools:context=".MainActivity" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/messageTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:background="@color/blue"
        android:padding="@dimen/padding_medium"
        android:text="@string/hello_world"
        android:textStyle="bold"
        tools:context=".Home" />

    <Button
        android:id="@+id/startTraceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:onClick="startTracing"
        android:text="@string/start_trace" />

    <Button
        android:id="@+id/myPathButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startTraceButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="showMyPath"
        android:text="@string/myPath" />

</RelativeLayout>
