<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/blue"
        android:padding="@dimen/padding_medium"
        android:text="@string/hello_world"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:context=".mypathIO" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="156dp"
        android:onClick="onLoginClick"
        android:text="@string/loginButton" />

    <EditText
        android:id="@+id/userid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="86dp"
        android:background="@color/blue"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userid"
        android:layout_alignLeft="@+id/textView1"
        android:background="@color/white"
        android:padding="@dimen/padding_medium"
        android:text="@string/user"
        android:textStyle="bold"
        tools:context=".mypathIO" />

</RelativeLayout>
